// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[template] reflection.hbs should compile a callable reflection 1`] = `
"## Hierarchy

[partial: hierarchy]

## Callable

[partial: member.signature]

[partial: index]

[partial: members]
"
`;

exports[`[template] reflection.hbs should compile an indexable reflection 1`] = `
"## Hierarchy

[partial: hierarchy]

## Indexable

[partial: member.indexSignatures]

[partial: index]

[partial: members]
"
`;

exports[`[template] reflection.hbs should compile reflection with type params / implemented by 1`] = `
"[partial: comment]

## Type parameters

[partial: typeParameters]

## Hierarchy

[partial: hierarchy]

## Implemented by

* [helper: type]
* [helper: type]
* [helper: type]

[partial: index]

[partial: members]
"
`;

exports[`[template] reflection.hbs should compile reflection without index 1`] = `
"[partial: comment]

## Type parameters

[partial: typeParameters]

## Hierarchy

[partial: hierarchy]

## Implemented by

* [helper: type]
* [helper: type]
* [helper: type]

[partial: members]
"
`;
